--- a/index.html
+++ b/index.html
@@ -246,20 +246,15 @@
               <p>
                 Khác
                 <i class="fas fa-angle-left right"></i>
-                <span class="badge badge-info right">2</span>
+                <span class="badge badge-info right">1</span>
               </p>
             </a>
             <ul class="nav nav-treeview">
+
               <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
+                <a href="./thongkeadmin.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Phân quyền</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Thống kê báo cáo</p>
+                  <p>Thống kê</p>
                 </a>
               </li>
 
@@ -291,7 +286,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./duyetbainhucau.html" class="nav-link">
+                <a href="./duyettinnhucau.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Duyệt bài đăng nhu cầu</p>
                 </a>
