--- a/anhanvienkiemdinh/kiemdinhnongsan.html
+++ b/anhanvienkiemdinh/kiemdinhnongsan.html
@@ -415,42 +415,23 @@
                           <form>
                             <div class="form-row">
                               <div class="form-group col-md-6">
-                                <label for="inputEmail4">Tên nông sản</label>
-                                <input type="email" class="form-control" id="inputEmail4" disabled value="Dưa hấu" >
+                                <label for="inputEmail4">Số lượng</label>
+                                <input type="email" class="form-control" id="inputEmail4"  value="4 tấn" >
                               </div>
                               <div class="form-group col-md-6">
-                                <label for="inputPassword15">Loại nông sản</label>
-                                <input type="password" class="form-control" id="inputPassword15" disabled value="Trái cây" >
+                                <label for="inputPassword15">Tình trạng</label>
+                                <input type="text" class="form-control" id="inputPassword15"  value="Bình thường" >
                               </div>
                             </div>
                             <div class="form-group">
-                              <label for="inputAddress16">Mã nông sản</label>
-                              <input type="text" class="form-control" id="inputAddress16" disabled value="#001" >
-                            </div>
-                            <div class="form-group">
-                              <label for="inputAddress17">Mô tả nông sản</label>
-                              <input type="text" class="form-control" id="inputAddress17" disabled value="Thơm, ngon, mát, tốt cho sức khỏe" >
-                            </div>
-
-                            <div class="form-group">
-                              <label for="inputAddress18">Hình ảnh</label>
-                              <img src="./dist/img/AdminLTELogo.png"/>
-                            </div>
-
-                            <div class="form-group">
-                              <label for="inputAddress19">Tên nhà cung cấp</label>
-                              <input type="text" class="form-control" id="inputAddress19" disabled value="VinFarm" >
-                            </div>
-
-                            <div class="form-group">
-                              <label for="inputAddress22">Địa chỉ nhà cung cấp</label>
-                              <input type="text" class="form-control" id="inputAddress22" disabled value="12 Nguyễn Văn Bảo, P4, Gò vấp" >
+                              <label for="inputAddress16">Hạn mức chất lượng</label>
+                              <input type="text" class="form-control" id="inputAddress16"  value="30%" >
                             </div>
                           </form>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                          <button type="button" class="btn btn-primary">Save changes</button>
+                          <button type="button" class="btn btn-primary">Đủ yêu cầu</button>
                         </div>
                       </div>
                     </div>
