--- a/index.html
+++ b/index.html
@@ -220,13 +220,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./contacts.html" class="nav-link">
+                <a href="./admin/quanlythongtinnguoidung.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Quản lý thông tin người dùng</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./nhanvien.html" class="nav-link">
+                <a href="./admin/quanlynhanvien.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Quản lý thông tin nhân viên</p>
                 </a>
@@ -252,7 +252,7 @@
             <ul class="nav nav-treeview">
 
               <li class="nav-item">
-                <a href="./thongkeadmin.html" class="nav-link">
+                <a href="./admin/thongkeadmin.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Thống kê</p>
                 </a>
@@ -280,13 +280,13 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="./duyetbainongsan.html" class="nav-link">
+                <a href="./admin/duyetbainongsan.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Duyệt bài đăng nông sản</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./duyettinnhucau.html" class="nav-link">
+                <a href="./admin/duyettinnhucau.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Duyệt bài đăng nhu cầu</p>
                 </a>
