--- a/danhsachtinnhucau.html
+++ b/danhsachtinnhucau.html
@@ -12,12 +12,13 @@
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
 <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-<link rel="stylesheet" href="/css/blog.css">
-<link rel="stylesheet" href="/css/style.css">
-<link rel="stylesheet" href="/css/reponsive.css">
-<link rel="stylesheet" href="/css/magnific-popup.css">
-<link rel="stylesheet" href="/css/flaticon.css">
-<link rel="stylesheet" href="/css/post.css">
+  
+<link rel="stylesheet" href="./css/blog.css">
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/reponsive.css">
+<link rel="stylesheet" href="./css/magnific-popup.css">
+<link rel="stylesheet" href="./css/flaticon.css">
+<link rel="stylesheet" href="./css/post.css">
 <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
 <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -313,16 +314,17 @@
     <!-- Copyright -->
   </footer>
 
-  <script src="/script/script.js"></script>
+  <script src="./script/script.js"></script>
 
   <!-- jQuery -->
-<script src="../../plugins/jquery/jquery.min.js"></script>
+<script src="./plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
-<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../../dist/js/adminlte.min.js"></script>
+<script src="./dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="../../dist/js/demo.js"></script>
+<script src="./dist/js/demo.js"></script>
 <script src="View/adoanhnghiep/script.js"></script>
 
 </body>
